@@ -1,3 +1,12 @@
+2005-08-08  Elijah Newren  <newren@gmail.com>
+
+	Patch from Brent Smith to fix a duplicate string.  Fixes #309774.
+
+	* src/theme-parser.c (parse_toplevel_element, parse_draw_op_element):
+
+	Change "No \"%s\" attribute on element <%s>" string to "No \"%s\"
+	attribute on <%s> element"
+
 2005-08-03  Ray Strode  <rstrode@redhat.com>
 
 	Improve the behavior of keyboard move/resize and edge
